# canfar-library

./: .gitignore  .pre-commit-config.yaml  .spec.json  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  zensical.toml
.github/ISSUE_TEMPLATE/: request-new-image.yml
.github/workflows/: docs.yaml
docs/: design.md  faq.md  index.md  lifecycle.md  schema.md
images/base/: Dockerfile
manifests/: base.yaml
